--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Join BeeTrade - Earn money anytime, anywhere with just your mobile phone">
-  <meta name="keywords" content="BeeTrade,earn money,mobile trading,UPI,income">
-  <title>BeeTrade - Earn Anytime, Anywhere 💰</title>
+  <meta name="description" content="Join FreeTrader - Earn money anytime, anywhere with just your mobile phone">
+  <meta name="keywords" content="FreeTrader,earn money,mobile trading,UPI,income">
+  <title>FreeTrader - Earn Anytime, Anywhere 💰</title>
 
   <!-- 样式文件 -->
   <link rel="stylesheet" href="css/main.css">
@@ -55,16 +55,16 @@
         <div class="carousel-wrapper">
           <div class="carousel-slides">
             <div class="carousel-slide active">
-              <img src="assets/images/activities-1.jpg" alt="BeeTrade Promotion 1" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22%3E%3Crect fill=%22%2367C23A%22 width=%22600%22 height=%22400%22/%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2232%22 font-weight=%22bold%22 text-anchor=%22middle%22 x=%22300%22 y=%22180%22%3EBeeTrade%3C/text%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2220%22 text-anchor=%22middle%22 x=%22300%22 y=%22220%22%3EEarn Anytime, Anywhere%3C/text%3E%3C/svg%3E'">
+              <img src="assets/images/activities-1.jpg" alt="FreeTrader Promotion 1" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22%3E%3Crect fill=%22%2367C23A%22 width=%22600%22 height=%22400%22/%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2232%22 font-weight=%22bold%22 text-anchor=%22middle%22 x=%22300%22 y=%22180%22%3EFreeTrader%3C/text%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2220%22 text-anchor=%22middle%22 x=%22300%22 y=%22220%22%3EEarn Anytime, Anywhere%3C/text%3E%3C/svg%3E'">
             </div>
             <div class="carousel-slide">
-              <img src="assets/images/activities-2.jpg" alt="BeeTrade Promotion 2" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22%3E%3Crect fill=%22%233b82f6%22 width=%22600%22 height=%22400%22/%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2232%22 font-weight=%22bold%22 text-anchor=%22middle%22 x=%22300%22 y=%22180%22%3EEarn Daily%3C/text%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2220%22 text-anchor=%22middle%22 x=%22300%22 y=%22220%22%3EStart Trading Now%3C/text%3E%3C/svg%3E'">
+              <img src="assets/images/activities-2.jpg" alt="FreeTrader Promotion 2" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22%3E%3Crect fill=%22%233b82f6%22 width=%22600%22 height=%22400%22/%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2232%22 font-weight=%22bold%22 text-anchor=%22middle%22 x=%22300%22 y=%22180%22%3EEarn Daily%3C/text%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2220%22 text-anchor=%22middle%22 x=%22300%22 y=%22220%22%3EStart Trading Now%3C/text%3E%3C/svg%3E'">
             </div>
             <div class="carousel-slide">
-              <img src="assets/images/activities-3.jpg" alt="BeeTrade Promotion 3" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22%3E%3Crect fill=%22%23fb923c%22 width=%22600%22 height=%22400%22/%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2232%22 font-weight=%22bold%22 text-anchor=%22middle%22 x=%22300%22 y=%22180%22%3EJoin Now%3C/text%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2220%22 text-anchor=%22middle%22 x=%22300%22 y=%22220%22%3EGet %E2%82%B9100 Bonus%3C/text%3E%3C/svg%3E'">
+              <img src="assets/images/activities-3.jpg" alt="FreeTrader Promotion 3" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22%3E%3Crect fill=%22%23fb923c%22 width=%22600%22 height=%22400%22/%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2232%22 font-weight=%22bold%22 text-anchor=%22middle%22 x=%22300%22 y=%22180%22%3EJoin Now%3C/text%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2220%22 text-anchor=%22middle%22 x=%22300%22 y=%22220%22%3EGet %E2%82%B9100 Bonus%3C/text%3E%3C/svg%3E'">
             </div>
             <div class="carousel-slide">
-              <img src="assets/images/activities-4.jpg" alt="BeeTrade Promotion 4" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22%3E%3Crect fill=%22%23fb923c%22 width=%22600%22 height=%22400%22/%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2232%22 font-weight=%22bold%22 text-anchor=%22middle%22 x=%22300%22 y=%22180%22%3EJoin Now%3C/text%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2220%22 text-anchor=%22middle%22 x=%22300%22 y=%22220%22%3EGet %E2%82%B9100 Bonus%3C/text%3E%3C/svg%3E'">
+              <img src="assets/images/activities-4.jpg" alt="FreeTrader Promotion 4" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22%3E%3Crect fill=%22%23fb923c%22 width=%22600%22 height=%22400%22/%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2232%22 font-weight=%22bold%22 text-anchor=%22middle%22 x=%22300%22 y=%22180%22%3EJoin Now%3C/text%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2220%22 text-anchor=%22middle%22 x=%22300%22 y=%22220%22%3EGet %E2%82%B9100 Bonus%3C/text%3E%3C/svg%3E'">
             </div>
           </div>
 
@@ -149,7 +149,7 @@
     <!-- Right: Registration Form -->
     <section class="form-section">
       <div class="form-header">
-        <h2>Join BeeTrade Now</h2>
+        <h2>Join FreeTrader Now</h2>
         <p class="form-subtitle">Fill in your information to start earning</p>
       </div>
 
@@ -253,7 +253,7 @@
       </div>
 
       <h3>Submission Successful!</h3>
-      <p class="dialog-message">Thank you for joining BeeTrade!</p>
+      <p class="dialog-message">Thank you for joining FreeTrader!</p>
       <p class="dialog-message">Our customer service team will contact you soon.</p>
       <p class="dialog-prompt">Need immediate assistance? Click the button below</p>
 
