--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Join FreeTrader - Earn money anytime, anywhere with just your mobile phone">
   <meta name="keywords" content="FreeTrader,earn money,mobile trading,UPI,income">
+  <link rel="icon" type="image/png" href="./assets/images/logo.png">
   <title>FreeTrader - Earn Anytime, Anywhere 💰</title>
 
   <!-- 样式文件 -->
@@ -273,7 +274,7 @@
   <script src="config.js"></script>
   <script src="js/validator.js"></script>
   <script src="js/api.js"></script>
-  <script src="js/facebook-pixel.js"></script>
+  <!-- <script src="js/facebook-pixel.js"></script> -->
   <script src="js/carousel.js"></script>
   <script src="js/app.js"></script>
 </body>
