--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Facebook Pixel Code -->
   <script>
     // Load config first (will be overridden by config.js)
-    window.FB_PIXEL_ID = '1571699977316147';
+    window.FB_PIXEL_ID = '';
   </script>
   <script>
     !function(f,b,e,v,n,t,s)
@@ -43,7 +43,7 @@
   </script>
   <noscript>
     <img height="1" width="1" style="display:none"
-         src="https://www.facebook.com/tr?id=1571699977316147&ev=PageView&noscript=1"/>
+         src="https://www.facebook.com/tr?id=&ev=PageView&noscript=1"/>
   </noscript>
   <!-- End Facebook Pixel Code -->
 </head>
