--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
 
         <!-- Email -->
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label for="email">
             Email <span class="required">*</span>
           </label>
@@ -185,7 +185,7 @@
             autocomplete="email"
           >
           <span class="error-message" id="email-error"></span>
-        </div>
+        </div> -->
 
         <!-- Phone -->
         <div class="form-group">
@@ -204,7 +204,7 @@
         </div>
 
         <!-- Telegram -->
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label for="telegram">
             Telegram <span class="required">*</span>
           </label>
@@ -216,10 +216,10 @@
             required
           >
           <span class="error-message" id="telegram-error"></span>
-        </div>
+        </div> -->
 
         <!-- WhatsApp (Optional) -->
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label for="whatsapp">
             WhatsApp <span class="optional">(Optional)</span>
           </label>
@@ -230,7 +230,7 @@
             placeholder="+91 9876543210"
           >
           <span class="error-message" id="whatsapp-error"></span>
-        </div>
+        </div> -->
 
         <!-- Submit Button -->
         <button type="submit" class="submit-btn" id="submitBtn">
