--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Join FreeTrader - Earn money anytime, anywhere with just your mobile phone">
   <meta name="keywords" content="FreeTrader,earn money,mobile trading,UPI,income">
-  <link rel="icon" type="image/png" href="./assets/images/logo.png">
+  <link rel="icon" type="image/png" href="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/assets/images/logo.png">
   <title>FreeTrader - Earn Anytime, Anywhere 💰</title>
 
   <!-- 样式文件 -->
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/css/main.css">
+  <link rel="stylesheet" href="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/css/responsive.css">
 
   <!-- Favicon（可选） -->
   <!-- <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon"> -->
@@ -56,16 +56,16 @@
         <div class="carousel-wrapper">
           <div class="carousel-slides">
             <div class="carousel-slide active">
-              <img src="assets/images/activities-1.jpg" alt="FreeTrader Promotion 1" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22%3E%3Crect fill=%22%2367C23A%22 width=%22600%22 height=%22400%22/%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2232%22 font-weight=%22bold%22 text-anchor=%22middle%22 x=%22300%22 y=%22180%22%3EFreeTrader%3C/text%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2220%22 text-anchor=%22middle%22 x=%22300%22 y=%22220%22%3EEarn Anytime, Anywhere%3C/text%3E%3C/svg%3E'">
+              <img src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/assets/images/activities-1.jpg" alt="FreeTrader Promotion 1" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22%3E%3Crect fill=%22%2367C23A%22 width=%22600%22 height=%22400%22/%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2232%22 font-weight=%22bold%22 text-anchor=%22middle%22 x=%22300%22 y=%22180%22%3EFreeTrader%3C/text%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2220%22 text-anchor=%22middle%22 x=%22300%22 y=%22220%22%3EEarn Anytime, Anywhere%3C/text%3E%3C/svg%3E'">
             </div>
             <div class="carousel-slide">
-              <img src="assets/images/activities-2.jpg" alt="FreeTrader Promotion 2" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22%3E%3Crect fill=%22%233b82f6%22 width=%22600%22 height=%22400%22/%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2232%22 font-weight=%22bold%22 text-anchor=%22middle%22 x=%22300%22 y=%22180%22%3EEarn Daily%3C/text%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2220%22 text-anchor=%22middle%22 x=%22300%22 y=%22220%22%3EStart Trading Now%3C/text%3E%3C/svg%3E'">
+              <img src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/assets/images/activities-2.jpg" alt="FreeTrader Promotion 2" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22%3E%3Crect fill=%22%233b82f6%22 width=%22600%22 height=%22400%22/%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2232%22 font-weight=%22bold%22 text-anchor=%22middle%22 x=%22300%22 y=%22180%22%3EEarn Daily%3C/text%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2220%22 text-anchor=%22middle%22 x=%22300%22 y=%22220%22%3EStart Trading Now%3C/text%3E%3C/svg%3E'">
             </div>
             <div class="carousel-slide">
-              <img src="assets/images/activities-3.jpg" alt="FreeTrader Promotion 3" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22%3E%3Crect fill=%22%23fb923c%22 width=%22600%22 height=%22400%22/%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2232%22 font-weight=%22bold%22 text-anchor=%22middle%22 x=%22300%22 y=%22180%22%3EJoin Now%3C/text%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2220%22 text-anchor=%22middle%22 x=%22300%22 y=%22220%22%3EGet %E2%82%B9100 Bonus%3C/text%3E%3C/svg%3E'">
+              <img src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/assets/images/activities-3.jpg" alt="FreeTrader Promotion 3" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22%3E%3Crect fill=%22%23fb923c%22 width=%22600%22 height=%22400%22/%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2232%22 font-weight=%22bold%22 text-anchor=%22middle%22 x=%22300%22 y=%22180%22%3EJoin Now%3C/text%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2220%22 text-anchor=%22middle%22 x=%22300%22 y=%22220%22%3EGet %E2%82%B9100 Bonus%3C/text%3E%3C/svg%3E'">
             </div>
             <div class="carousel-slide">
-              <img src="assets/images/activities-4.jpg" alt="FreeTrader Promotion 4" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22%3E%3Crect fill=%22%23fb923c%22 width=%22600%22 height=%22400%22/%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2232%22 font-weight=%22bold%22 text-anchor=%22middle%22 x=%22300%22 y=%22180%22%3EJoin Now%3C/text%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2220%22 text-anchor=%22middle%22 x=%22300%22 y=%22220%22%3EGet %E2%82%B9100 Bonus%3C/text%3E%3C/svg%3E'">
+              <img src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/assets/images/activities-4.jpg" alt="FreeTrader Promotion 4" onerror="this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%22600%22 height=%22400%22%3E%3Crect fill=%22%23fb923c%22 width=%22600%22 height=%22400%22/%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2232%22 font-weight=%22bold%22 text-anchor=%22middle%22 x=%22300%22 y=%22180%22%3EJoin Now%3C/text%3E%3Ctext fill=%22white%22 font-family=%22sans-serif%22 font-size=%2220%22 text-anchor=%22middle%22 x=%22300%22 y=%22220%22%3EGet %E2%82%B9100 Bonus%3C/text%3E%3C/svg%3E'">
             </div>
           </div>
 
@@ -271,11 +271,11 @@
   <div id="toast" class="toast hidden" role="alert"></div>
 
   <!-- JavaScript文件 -->
-  <script src="config.js"></script>
-  <script src="js/validator.js"></script>
-  <script src="js/api.js"></script>
+  <script src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/config.js"></script>
+  <script src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/js/validator.js"></script>
+  <script src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/js/api.js"></script>
   <!-- <script src="js/facebook-pixel.js"></script> -->
-  <script src="js/carousel.js"></script>
-  <script src="js/app.js"></script>
+  <script src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/js/carousel.js"></script>
+  <script src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/js/app.js"></script>
 </body>
 </html>
