--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             type="text"
             id="name"
             name="name"
-            placeholder="Enter your full name"
+            placeholder=""
             required
             autocomplete="name"
           >
@@ -196,7 +196,7 @@
             type="tel"
             id="phone"
             name="phone"
-            placeholder="Enter your 10-digit phone number"
+            placeholder=""
             required
             autocomplete="tel"
           >
