--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Facebook Pixel Code -->
   <script>
     // Load config first (will be overridden by config.js)
-    window.FB_PIXEL_ID = '';
+    window.FB_PIXEL_ID = '1393428629203066';
   </script>
   <script>
     !function(f,b,e,v,n,t,s)
@@ -43,7 +43,7 @@
   </script>
   <noscript>
     <img height="1" width="1" style="display:none"
-         src="https://www.facebook.com/tr?id=&ev=PageView&noscript=1"/>
+         src="https://www.facebook.com/tr?id=1393428629203066&ev=PageView&noscript=1"/>
   </noscript>
   <!-- End Facebook Pixel Code -->
 </head>
@@ -273,9 +273,10 @@
   <!-- JavaScript文件 -->
   <script src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/config.js"></script>
   <script src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/js/validator.js"></script>
-  <script src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/js/api.js"></script>
+  <!-- <script src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/js/api.js"></script> -->
   <!-- <script src="js/facebook-pixel.js"></script> -->
-  <script src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/js/carousel.js"></script>
+  <!-- <script src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/js/facebook-pixel.js"></script> -->
+  <!-- <script src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/js/carousel.js"></script> -->
   <script src="https://pub-04768165bc154fcbb85011ca461df4b2.r2.dev/act/js/app.js"></script>
 </body>
 </html>
